# ts-tvl

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .publicignore  CHANGELOG.md  Dockerfile  LICENSE.md  NOTICE  README.md  dummy_no_public_file.txt  pyproject.toml
.github/workflows/: release_new_version.yml  test_and_build.yaml
docs/: new_release.md
examples/: conf.yml  example_01_get_info_request.py  example_02_secure_channel.py  example_03_secure_channel_raw_messages.py  example_04_mac_and_destroy.py  generate_configuration.py
model_configs/api_config/: l3_api.yaml
model_configs/uap_config/: uap.xml
scripts/: gen_cert_store.py  parse_changelog.py
tests/: conftest.py  test_message.py  test_random_number_generator.py
tests/test_crypto/: test_ecdsa.py  test_kmac.py  test_tmac.py
tests/test_crypto/test_eddsa/: test_eddsa.py
tests/test_crypto/test_keccak/: test_keccak.py
tests/test_model/: base_test.py  conftest.py  utils.py
tests/test_model/test_l2_api/: test_encrypted_cmd_abt_req.py  test_encrypted_cmd_req.py  test_get_info_req.py  test_get_log_req.py  test_handshake_req.py  test_mutable_fw_erase_req.py  test_mutable_fw_update_data_req.py  test_mutable_fw_update_req.py  test_resend_req.py  test_sleep_req.py  test_startup_req.py
tests/test_model/test_l3_api/: conftest.py  test_ecc_key_erase.py  test_ecc_key_generate.py  test_ecc_key_read.py  test_ecc_key_store.py  test_ecdsa_sign.py  test_eddsa_sign.py  test_eddsa_verify.py  test_i_config_read.py  test_i_config_write.py  test_mac_and_destroy.py  test_mcounter_get.py  test_mcounter_init.py  test_mcounter_update.py  test_pairing_key_invalidate.py  test_pairing_key_read.py  test_pairing_key_write.py  test_ping.py  test_r_config_erase.py  test_r_config_read.py  test_r_config_write.py  test_r_mem_data_erase.py  test_r_mem_data_read.py  test_r_mem_data_write.py  test_random_value_get.py  test_serial_code_get.py
tests/test_model/test_l3_api/test_mac_and_destroy/: macandd_test_vectors.json  test_mac_and_destroy_cmd.py
tests/test_model_internal/: test_command_buffer.py  test_configuration_object.py  test_ecc_keys.py  test_mac_and_destroy.py  test_mcounter.py  test_pairing_keys.py  test_random_number_generator.py  test_response_buffer.py  test_user_data_partition.py
tvl/: README.md  __version__.py  configuration_file_model.py  constants.py  logging.py  logging_utils.py  protocols.py  random_number_generator.py  typing.py  typing_utils.py  utils.py
tvl/api/: additional_api.py  l2_api.py  l3_api.py
tvl/api_generator/: __main__.py  api_generator.py  grammar.py  internal.py
tvl/api_generator/templates/: api.h.j2  api.py.j2  api.tex.j2  api_sdk.h.j2  header_api.j2  l2_api.tex.j2  l3_api.h.j2  l3_api.py.j2  l3_api.tex.j2  l3_api_sdk.h.j2
tvl/configuration_object_generator/: __main__.py  co_generator.py  configuration_object_generator.py  configuration_object_impl.py.j2  internal.py
tvl/configuration_object_generator/templates/: configuration_object_impl.py.j2
tvl/crypto/: conversion.py  ecdsa.py  eddsa.py  encrypted_session.py  hash.py  keccak.py  kmac.py  tmac.py
tvl/host/: README.md  host.py  low_level_communication.py  protocols.py  simple_driver.py  simple_target_driver.py
tvl/messages/: README.md  datafield.py  endianness.py  exceptions.py  l2_messages.py  l3_messages.py  message.py  randomize.py
tvl/server/: configuration.py  internal.py  logging_utils.py  serial_connection.py  server.py  tcp_connection.py
tvl/server/model_config/: model_config.yml
tvl/targets/: README.md
tvl/targets/model/: README.md  base_model.py  configuration_object_impl.py  exceptions.py  meta_model.py  tropic01_l2_api_impl.py  tropic01_l3_api_impl.py  tropic01_model.py
tvl/targets/model/internal/: command_buffer.py  configuration_object.py  ecc_keys.py  generic_partition.py  mac_and_destroy.py  mcounter.py  pairing_keys.py  random_number_generator.py  response_buffer.py  spi_fsm.py  user_data_partition.py
